<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Programadores em acao</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="todo_name_button">Por Fazer</string>
    <string name="main_activity_ciclo_de_vida">Ciclo De Vida</string>
    <string name="main_activity_titulo">Programadores em Ação</string>
    <string name="title_activity_ciclo_de_vida">Ciclo de vida</string>
    <string name="titulo_activity_ciclo_de_vida">Exemplo dos Ciclos de Vida da activity</string>
    <string name="title_activity_componentes">Componentes</string>
    <string name="button">Button</string>
    <string name="main_componentes">Componentes</string>
    <string name="title_activity_text_view">Editando TextView</string>
    <string name="main_text_view">Editar TextView</string>
    <string name="title_activity_drag_drop">DragDropActivity</string>
    <string name="title_activity_envia_objeto">EnviaObjetoActivity</string>
    <string name="title_activity_recebe_objeto">RecebeObjetoActivity</string>
    <string name="title_activity_componente_edit">ComponenteEditActivity</string>
    <string name="title_activity_componente_radio_group">ComponenteRadioGroupActivity</string>

</resources>
