<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/simple_margin_component"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_margin_component"
        android:gravity="center"
        android:text="@string/main_activity_titulo"
        android:textSize="35sp"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/main_activity_ciclo_de_vida" 
                android:id="@+id/main_activity_btn_ciclo_de_vida"
                android:onClick="click"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/main_componentes"
                android:id="@+id/main_btn_componentes"
                android:onClick="click"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/main_text_view"
                android:id="@+id/main_btn_text_view"
                android:onClick="click"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="Drag Drop"
                android:id="@+id/main_btn_drag_drop"
                android:onClick="click"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"

                android:text="Envia e recebe Objeto"
                android:id="@+id/main_btn_envia_objeto"
                android:onClick="click"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:enabled="false"
                android:text="@string/todo_name_button"
                android:onClick="click"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:enabled="false"
                android:text="@string/todo_name_button"
                android:onClick="click"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:enabled="false"
                android:text="@string/todo_name_button"
                android:onClick="click"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:enabled="false"
                android:text="@string/todo_name_button"
                android:onClick="click"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:enabled="false"
                android:text="@string/todo_name_button"
                android:onClick="click"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:enabled="false"
                android:text="@string/todo_name_button"
                android:onClick="click"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>